fix improper product title wrap in firefox

--- a/imports/plugins/included/default-theme/client/styles/products/productGrid.less
+++ b/imports/plugins/included/default-theme/client/styles/products/productGrid.less
@@ -34,6 +34,7 @@
   font-weight: 400;
   text-align: center;
   word-break: break-word;
+  word-break: initial;
 }
 
 
